<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    android:background="?attr/colorSurface">

    <!-- Título -->
    <TextView
        android:id="@+id/tvRegistroEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro de Evento"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Campo Nombre -->

    <!-- Campo Descripción -->

    <!-- Campo Dirección -->

    <!-- Campo Precio -->

    <!-- Campo Fecha -->

    <!-- Campo Aforo -->

    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="87dp"
        android:layout_height="61dp"
        android:layout_marginStart="300dp"
        android:src="@drawable/user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/fecha"
        android:inputType="date"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="100dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPrecio" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegistroEvento" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="100dp"
        android:hint="@string/descripcion"
        android:layout_marginLeft="10dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:hint="@string/direccion"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescripcion" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginTop="8dp"
        android:hint="@string/precio"
        android:layout_marginLeft="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDireccion" />

    <EditText
        android:id="@+id/etAforo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/aforo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFecha" />

    <!-- Botón Guardar -->

    <!-- Botón Cancelar -->

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="210dp"
        android:text="@string/cancelar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGuardar"
        app:layout_constraintTop_toBottomOf="@id/etAforo" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="8dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toStartOf="@id/btnCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAforo" />
</androidx.constraintlayout.widget.ConstraintLayout>
